<resources>
    <string name="app_name">Panel</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_profile">Profile</string>
    <string name="action_newMsg">New Message</string>
    <string name="action_exit">Exit</string>
    <string name="action_newGrp">Suscribe to a Tag</string>

    <string name="title_activity_about">About</string>

    <string name="title_activity_show_messages">ShowMessages</string>
    <string name="title_activity_info">Information</string>
    <string name="last_hop_string">Last Hop MAC:</string>
    <string name="n_tx_string">Transmissions:</string>
    <string name="sent_to_string">Sent to:</string>
    <string name="received_time_string">Received at:</string>
    <string name="sent_at_string">Sent at:</string>
    <string name="msg_string">Message:</string>
    <string name="mac_string">MAC:</string>
    <string name="user_string">Username:</string>
    <string name="hash_string">Hash:</string>
    <string name="size_string">Size:</string>
    <string name="send_string">Send</string>
    <string name="image_id">Image</string>
</resources>
