<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_newMsg" android:title="@string/action_newMsg"
        android:orderInCategory="100" app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_add"/>
    <item android:id="@+id/action_newGrp" android:title="@string/action_newGrp"
        android:orderInCategory="100" app:showAsAction="ifRoom"
        />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_about" android:title="@string/action_about"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_exit" android:title="@string/action_exit"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
